# my_web_page

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
main_page/: manage.py
main_page/locale/en/LC_MESSAGES/: django.po
main_page/locale/ro/LC_MESSAGES/: django.po
main_page/locale/ru/LC_MESSAGES/: django.po
main_page/main_page/: asgi.py  settings.py  urls.py  wsgi.py
main_page/mypage/: urls.py  views.py
main_page/mypage/templates/mypage/: cv.html  cv2.html  cv3.html  cv4.html  cv5.html  cv6.html  cv7.html  cv8.html  index.html  index2.html  nav-bar.html
main_page/ro/css/: style-2.css  style.css
main_page/ru/css/: style.css
